--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ log = "0.4"
 
 [features]
 default = ["debug_printf", "debug_assert","CONFIG_META_CSUM_ENABLE"]
+std = []
 debug_printf = []
 debug_assert = []
 own_assert = []
 CONFIG_META_CSUM_ENABLE = []
+
